res/css/views/rooms/_EventTile.scss
/* ... */
.mx_ThreadView {
    display: flex;
    flex-direction: column;

    .mx_ThreadView_List {
        flex: 1;
        overflow: scroll;
    }

    .mx_EventTile_roomName {
        display: none;
    }

    .mx_EventTile {
        display: flex;
        flex-direction: column;
        padding-top: 0;

        .mx_EventTile_line {
            padding-left: 0;
            order: 10 !important;
        }

        .mx_MessageTimestamp {
            font-size: $font-10px;
        }

        .mx_ReactionsRow {
            order: 999;
            padding-left: 0;
            padding-right: 0;
        }
    }

    .mx_EventTile[data-layout=bubble] {
        margin-left: 36px;
        margin-right: 36px;

        .mx_EventTile_line.mx_EventTile_mediaLine {
            padding: 0 !important;
            max-width: 100%;

            .mx_MFileBody {
                width: 100%;
            }
        }

        &[data-self=true] {
            align-items: flex-end;

            .mx_EventTile_line.mx_EventTile_mediaLine {
                margin: 0 -13px 0 0; // align with normal messages
            }
        }

        &[data-self=false] {
            .mx_MessageActionBar {
                right: -60px; // smaller overlap, otherwise it'll overflow on the right
            }
        }
    }

    .mx_EventTile[data-layout=group] {
        width: 100%;

        .mx_EventTile_content,
        .mx_HiddenBody,
        .mx_RedactedBody,
        .mx_MPollBody,
        .mx_ReplyChain_wrapper {
            margin-left: 48px;
            margin-right: 8px;

            .mx_EventTile_content,
            .mx_HiddenBody,
            .mx_RedactedBody,
            .mx_MImageBody {
                margin: 0;
            }
        }

        .mx_ReactionsRow {
            margin-left: 36px;
            margin-right: 8px;
        }

        .mx_MessageTimestamp {
            top: 2px !important;
            width: auto;
        }

        .mx_EventTile_senderDetails {
            display: flex;
            align-items: center;
            gap: calc(6px + $selected-message-border-width);

            a {
                flex: 1;
                min-width: none;
                max-width: 100%;
                display: flex;
                align-items: center;

                .mx_DisambiguatedProfile {
                    margin-left: 8px;
                    flex: 1;
                }
            }
        }
    }

    .mx_EventTile_mediaLine {
        padding-left: 36px !important;
        padding-right: 50px;

        .mx_MImageBody {
            margin: 0;
            padding: 0;
        }
    }

    .mx_MessageComposer_sendMessage {
        margin-right: 0;
    }
}

